# finops-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  clear_qdrant.py  demo.html  demo_integrated.py  demo_real.py  demo_simple.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_demo.py  run_phase4_tests.py  test_fixes.py  test_google_api.py  test_openrouter.py
config/: settings.py
requirements/: agents-new.txt  agents.txt  base-new.txt  base.txt  test.txt
scripts/: run_tests.sh  smoke_test_memory.py  smoke_test_orchestration.py  test_quick.sh
src/adapters/: __init__.py
src/agents/: __init__.py  deep_research.py  document.py  finops.py  github.py  models.py  research.py
src/auth/: __init__.py  jwt_auth.py  models.py
src/database/: __init__.py  connection.py  init_db.py  models.py  neo4j_client.py  qdrant_client.py  redis_client.py
src/llm/: __init__.py  new.py  openrouter_client.py
src/memory/: __init__.py  config.py  exceptions.py  mem0_service.py  models.py
src/orchestration/: __init__.py  cross_agent.py  dataflow.py  langgraph_runner.py  parallel.py  result_streaming.py  task_offloader.py
src/planner/: __init__.py  compiler.py  exceptions.py  models.py  planner.py
src/websocket/: __init__.py  agent_integration.py  connection_manager.py  handler.py  router.py
src/workers/: __init__.py  celery_app.py  queue_monitor.py  scaling.py  tasks.py
tests/: README.md  conftest.py
tests/agents/: __init__.py  test_base_agent.py  test_phase4_deep_research.py  test_phase4_document.py  test_phase4_finops.py  test_phase4_github.py  (+4 more)
(+51 files in other folders)
